--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,6 +15,13 @@ spec:
       containers:
         - name: auth
           image: ozshm/auth:1.0
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
+
 ---
 apiVersion: v1
 kind: Service
