--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,27 +18,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@osticketing/common": "^1.0.17",
-    "@types/cookie-session": "^2.0.44",
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^8.5.9",
-    "cookie-session": "^2.0.0",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1",
-    "mongoose-update-if-current": "^1.4.0",
+    "@osticketing/common": "^1.0.18",
+    "@types/bull": "^4.10.0",
+    "bull": "^4.10.1",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@types/jest": "^29.0.3",
-    "@types/supertest": "^2.0.12",
     "jest": "^29.0.3",
-    "mongodb-memory-server": "^8.9.2",
-    "supertest": "^6.2.4",
     "ts-jest": "^29.0.1"
   }
 }
