--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --no-cache",
+    "test": "jest --watchAll --no-cache",
     "test:ci": "jest --detectOpenHandles"
   },
   "jest": {
