--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -1,20 +1,19 @@
 name: deploy-auth
-
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'auth/**'
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd auth && docker build -t ozshm/auth . 
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push ozshm/auth
-      
+    push:
+        branches: 
+            - master 
+        paths: 
+            - 'auth/**'
+jobs: 
+    build:
+        runs-on: ubuntu-latest 
+        steps: 
+            - uses: actions/checkout@v2 
+            - run: cd auth && docker build -t ozshm/auth .
+            - 
+              uses: docker/login-action@v1 
+              with: 
+                 username: ${{ secrets.DOCKER_USERNAME }}
+                 password: ${{ secrets.DOCKER_TOKEN }} 
+            - run: docker push ozshm/auth
