--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -12,7 +12,7 @@ jobs:
             - uses: actions/checkout@v2 
             - run: cd auth && docker build -t ozshm/auth .
             - run: 
-                echo $DOCKER_TOKEN | docker login -u $DOCKER_USERNAME
+                echo $DOCKER_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
               env: 
                 DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
                 DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
