--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -11,9 +11,10 @@ jobs:
         steps: 
             - uses: actions/checkout@v2 
             - run: cd auth && docker build -t ozshm/auth .
-            - run: 
-                echo $DOCKER_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
-              env: 
-                DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-                DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+            - 
+              name: Login to Docker hub
+              uses: docker/login-action@v2 
+              with: 
+                 username: ${{ secrets.DOCKER_USERNAME }}
+                 password: ${{ secrets.DOCKER_TOKEN }} 
             - run: docker push ozshm/auth
