--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -18,3 +18,11 @@ jobs:
                  username: ${{ secrets.DOCKER_USERNAME }}
                  password: ${{ secrets.DOCKER_TOKEN }} 
             - run: docker push ozshm/auth
+            - uses: digitalocean/action-doctl@v2
+              with:
+                token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+            - 
+              name: Changing context to kubernetes cluster-ticketing on Digital Ocean
+              run: doctl kubernetes cluster kubeconfig save ticketing
+            - run: kubectl rollout restart deployment auth-depl
+            
