--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -16,4 +16,4 @@ jobs:
             - 
               name: Changing context to kubernetes cluster-ticketing on Digital Ocean
               run: doctl kubernetes cluster kubeconfig save ticketing
-            - run: kubectl apply -f infra/k8s
+            - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
