--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest 
         steps: 
             - uses: actions/checkout@v2 
-            - run: cd auth && docker build -t ozshm/auth .
+            - run: cd auth && docker build -t ozshm/auth:1.0 .
             - 
               name: Login to Docker hub
               uses: docker/login-action@v2 
