--- a/.github/workflows/deploy-expiration.yaml
+++ b/.github/workflows/deploy-expiration.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest 
         steps: 
             - uses: actions/checkout@v2 
-            - run: cd expiration && docker build -t ozshm/expiration .
+            - run: cd expiration && docker build -t ozshm/expiration:1.0 .
             - 
               name: Login to Docker hub
               uses: docker/login-action@v2 
