--- a/.github/workflows/deploy-orders.yaml
+++ b/.github/workflows/deploy-orders.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest 
         steps: 
             - uses: actions/checkout@v2 
-            - run: cd orders && docker build -t ozshm/orders .
+            - run: cd orders && docker build -t ozshm/orders:1.0 .
             - 
               name: Login to Docker hub
               uses: docker/login-action@v2 
