--- a/.github/workflows/deploy-payments.yaml
+++ b/.github/workflows/deploy-payments.yaml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest 
         steps: 
             - uses: actions/checkout@v2 
-            - run: cd payments && docker build -t ozshm/payments .
+            - run: cd payments && docker build -t ozshm/payments:1.0 .
             - 
               name: Login to Docker hub
               uses: docker/login-action@v2 
