--- a/.github/workflows/deploy-payments.yaml
+++ b/.github/workflows/deploy-payments.yaml
@@ -17,7 +17,7 @@ jobs:
               with: 
                  username: ${{ secrets.DOCKER_USERNAME }}
                  password: ${{ secrets.DOCKER_TOKEN }} 
-            - run: docker push ozshm/payments
+            - run: docker push ozshm/payments:1.0
             - uses: digitalocean/action-doctl@v2
               with:
                 token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
