--- a/.github/workflows/deploy-tickets.yaml
+++ b/.github/workflows/deploy-tickets.yaml
@@ -10,14 +10,14 @@ jobs:
         runs-on: ubuntu-latest 
         steps: 
             - uses: actions/checkout@v2 
-            - run: cd tickets && docker build -t ozshm/tickets .
+            - run: cd tickets && docker build -t ozshm/tickets:1.0 .
             - 
               name: Login to Docker hub
               uses: docker/login-action@v2 
               with: 
                  username: ${{ secrets.DOCKER_USERNAME }}
                  password: ${{ secrets.DOCKER_TOKEN }} 
-            - run: docker push ozshm/tickets
+            - run: docker push ozshm/tickets:1.0
             - uses: digitalocean/action-doctl@v2
               with:
                 token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
