--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: client
-          image: ozshm/client
+          image: ozshm/client:1.0
 ---
 apiVersion: v1
 kind: Service
